# Restaurant-Name-Generator

./: Dockerfile  README.md  ai_agents.py  alerts.py  analytics_events.jsonl  consumer.py  docker-compose.yml  langchain_helper.py  main.py  pyproject.toml  requirements.txt  ui_generator.py  ui_search.py
services/: alerts.py  embeddings.py  events.py  langchain_helper.py  search.py  storage.py
ui/: ui_analytics.py  ui_generator.py  ui_search.py
